<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Books</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">AboutApp Fragment</string>
    <string name="email">shikhar1097@gmail.com</string>
    <string name="username">Shikhar Dixit</string>
    <string name="phone">8765681707 / 7007784093</string>
    <string name="bookhub">BookHub</string>
    <string name="recycleauthorname">Name of the author</string>
    <string name="recyclerprice">Rs. 299</string>
    <string name="recyclerstars">4.5</string>
    <string name="bookName">Name of the book</string>
    <string name="bookAuthor">Author of the book</string>
    <string name="bookPrice">Price of the book</string>
    <string name="action_sort">Sort</string>
</resources>