<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#FFFFFF"
    android:padding="5dp">

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFFFFF"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgRecyclerbookcover"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_temp_bookcover" />

        <TextView
            android:id="@+id/txtRecyclerbookname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/imgRecyclerbookcover"
            android:padding="5dp"
            android:text="List Item"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtRecyclerauthorname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRecyclerbookname"
            android:layout_toEndOf="@+id/imgRecyclerbookcover"
            android:padding="5dp"
            android:text="@string/recycleauthorname"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtRecyclerprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRecyclerauthorname"
            android:layout_toEndOf="@+id/imgRecyclerbookcover"
            android:padding="5dp"
            android:text="@string/recyclerprice"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtRecyclerstars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:text="@string/recyclerstars"
            android:textColor="#ffeb3b"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgRecyclerstars"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="7dp"
            android:layout_toLeftOf="@+id/txtRecyclerstars"
            android:padding="5dp"
            android:src="@drawable/ic_stars" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>